--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       <div id="startPos">
         <img class="top-padding responsiveImg" src="/image/ceed start.jpg">
       </div>
+      <!-- フッター -->
               <footer id="myFooter">
                   <div id="mycontainer" class="container blackDiv">
                       <div class="row blackDiv"> 
